--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
 
   <main id="maincontent">
-    <section role="application" id="map-container">
+    <section id="map-container" role="application" tabindex="-1">
       <div id="map"></div>
     </section>
     <section>
