--- a/restaurant.html
+++ b/restaurant.html
@@ -29,7 +29,7 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
-    <section id="map-container" role="application">
+    <section id="map-container" role="application" tabindex="-1">
       <div id="map"></div>
     </section>
     <!-- End map -->
