Create a seperate file for service worker registration

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQYeHTzZvfCCHeBYpSuWfvK7WcToOQ-9M&libraries=places&callback=initMap"></script>
-
+  <!-- Register Service Worker -->
+  <script type="text/javascript" src="js/registerServiceWorker.js"></script>
+  
   <footer id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
