--- a/restaurant.html
+++ b/restaurant.html
@@ -63,6 +63,8 @@
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQYeHTzZvfCCHeBYpSuWfvK7WcToOQ-9M&libraries=places&callback=initMap"></script>
+  <!-- Register Service Worker -->
+  <script type="text/javascript" src="js/registerServiceWorker.js"></script>
   <!-- End scripts -->
 
 </body>
